	* reserved.c (cb_list_reserved): specify DEBUG-ITEM variables as
	  implemented if defined as register

2021-08-31  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_debug_item): only build DEBUG-ITEM if defined
	  as register and in this case unreserve overlapping reserved words
	* tree.c (cb_build_intrinsic), tree.h, reserved.c:
	  implement BIT-OF and BIT-TO-CHAR functions

2021-08-28  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_assignment_name): fix SELECT filename ASSIGN filename
	  to lead to "redefinition of filename" when (the default) dialect option
	  assign-clause=dynamic is active; identical names are now always seen
	  as literal (similar to assign-clause=external, but without label
	  handling), see bug 669

2021-08-01  Ron Norman <rjn@inglenet.com>

	* tree.h: additional fields for REPORT (varying, etc)
	* cobc.c (print_fields): for listing of REPORT show STEP value
	* parser.y: implement parsing for VARYING and nested OCCURS
	* parser.y: only skip COL + if first field on a report LINE

2021-07-29  Simon Sobisch <simonsobisch@gnu.org>

	* parser.y, config.def: changed the auto-setting of the RECURSIVE attribute
	  in programs that CALL their own PROGRAM-ID (possibly deep in never called
	  copybooks) to depend on the dialect option "self-call-recursive", with the
	  option to skip that or warn/error, fixing bug 686
	* parser.y: fix bug 748 SIGSEGV after warning: EXTFH address is not impl.

2021-07-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_getenv_path): drop invalid list from path
	* config.c (cb_load_std): fixed old error passing enum instead of int
	* parser.y: minor adjustments to USE handling
	* pplex.l: drop "spurious $" in col 7 rule, fixing bug #577
	* reserved.c, tree.h: added functions BIT-OF, BIT-TO-CHAR,
	  as unimplemented
	* tree.c (cb_build_intrinsic), tree.h, reserved.c:
	  implement HEX-OF and HEX-TO-CHAR functions

2021-07-07  Simon Sobisch <simonsobisch@gnu.org>
